updaterrr ~ 240724.16 emergency fix for word wrap

--- a/apollostage_sunset/b16_sunset/style.css
+++ b/apollostage_sunset/b16_sunset/style.css
@@ -3202,7 +3202,7 @@ Documentation of mobile classes:
 /* ## 6.1 Debugging Tools
    various 'debug' features are avail in this doc elsewhere */
 #footer p:last-of-type::after {
-  content: " | Apollostage build 240724 sunset";
+  content: " | Apollostage build 240724.16 sunset";
 }
 
 /* ########################################################################
